--- a/scss/style.css
+++ b/scss/style.css
@@ -205,6 +205,34 @@ body {
   height: 80px;
   background-color: #e3f6f5;
 }
+.header__inner {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+.header__slider {
+  display: inline-flex;
+  width: 100%;
+  height: 100%;
+  -webkit-animation: slider 10s 2s linear infinite;
+          animation: slider 10s 2s linear infinite;
+}
+@-webkit-keyframes slider {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+@keyframes slider {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
 
 .game {
   margin: 0 auto;
