--- a/scss/global/_variables.scss
+++ b/scss/global/_variables.scss
@@ -7,3 +7,12 @@ $blue: #90b4ce;
 // 固有カラー
 $font-color: #094067;
 $button-color: #3da9fc;
+
+// 黒板カラー
+$blackboard-color: #006400;
+$blackboard-border-color: #b8860b;
+$chalk-red-color: #f00;
+$chalk-blue-color: #1e90ff;
+$chalk-yellow-color: #ff0;
+$eraser-under-color: #0000cd;
+$eraser-top-color: #ffa500;
