--- a/scss/config/_game.scss
+++ b/scss/config/_game.scss
@@ -10,19 +10,7 @@
   box-shadow: 0px 4px 4px rgba($color: v.$black, $alpha: 0.5);
 
   &__inner {
-    gap: 20px;
     padding: 40px;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  &__start__container {
-    max-width: 434px;
-    width: 50%;
-    height: 420px;
-    text-align: center;
   }
 
   &__title {
@@ -38,11 +26,6 @@
     display: block;
     border: solid 3px v.$blue;
     border-radius: 16px;
-
-    &__name {
-      margin: 16px auto 40px;
-      font-size: 20px;
-    }
   }
 
   &__button {
@@ -56,4 +39,45 @@
     border-radius: 30px;
     box-shadow: 0px 4px 4px rgba($color: v.$black, $alpha: 0.5);
   }
+}
+
+// start-display
+.game__start-display {
+  gap: 20px;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  &__container {
+    max-width: 434px;
+    width: 50%;
+    height: 420px;
+    text-align: center;
+  }
+
+  &__input {
+    margin: 16px auto 40px;
+    font-size: 20px;
+  }
+}
+
+// theme-display
+.game__theme-display {
+  height: 100%;
+}
+
+// load-display
+.game__load-display {
+  height: 100%;
+}
+
+// play-display
+.game__play-display {
+  height: 100%;
+}
+
+// finish-display
+.game__finish-display {
+  height: 100%;
 }
