--- a/scss/style.css
+++ b/scss/style.css
@@ -205,6 +205,34 @@ body {
   height: 80px;
   background-color: #e3f6f5;
 }
+.header__inner {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+.header__slider {
+  display: inline-flex;
+  width: 100%;
+  height: 100%;
+  -webkit-animation: slider 10s 2s linear infinite;
+          animation: slider 10s 2s linear infinite;
+}
+@-webkit-keyframes slider {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+@keyframes slider {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
 
 .game {
   margin: 0 auto;
@@ -215,18 +243,7 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
 }
 .game__inner {
-  gap: 20px;
   padding: 40px;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.game__start__container {
-  max-width: 434px;
-  width: 50%;
-  height: 420px;
-  text-align: center;
 }
 .game__title {
   padding: 80px 0;
@@ -240,10 +257,6 @@ body {
   border: solid 3px #90b4ce;
   border-radius: 16px;
 }
-.game__input__name {
-  margin: 16px auto 40px;
-  font-size: 20px;
-}
 .game__button {
   width: 100%;
   height: 60px;
@@ -256,7 +269,41 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
 }
 
-.game__rule__container {
+.game__start-display {
+  gap: 20px;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.game__start-display__container {
+  max-width: 434px;
+  width: 50%;
+  height: 420px;
+  text-align: center;
+}
+.game__start-display__input {
+  margin: 16px auto 40px;
+  font-size: 20px;
+}
+
+.game__theme-display {
+  height: 100%;
+}
+
+.game__load-display {
+  height: 100%;
+}
+
+.game__play-display {
+  height: 100%;
+}
+
+.game__finish-display {
+  height: 100%;
+}
+
+.game__blackboard__container {
   max-width: 434px;
   width: 50%;
   height: 420px;
@@ -265,54 +312,54 @@ body {
   border-radius: 5px;
   position: relative;
 }
-.game__rule__chalk__1::before, .game__rule__chalk__1::after, .game__rule__chalk__2::before, .game__rule__chalk__2::after {
+.game__blackboard__chalk__1::before, .game__blackboard__chalk__1::after, .game__blackboard__chalk__2::before, .game__blackboard__chalk__2::after {
   position: absolute;
   content: "";
   bottom: 0;
 }
-.game__rule__chalk__1::before {
+.game__blackboard__chalk__1::before {
   width: 5%;
   right: 10%;
   border: solid 3px #f00;
   border-radius: 4px 4px 3px 4px;
 }
-.game__rule__chalk__1::after {
+.game__blackboard__chalk__1::after {
   width: 5%;
   right: 50%;
   border: solid 3px #fff;
   border-radius: 2px;
 }
-.game__rule__chalk__2::before {
+.game__blackboard__chalk__2::before {
   width: 4%;
   left: 10%;
   border: solid 3px #1e90ff;
   border-radius: 3px 0;
 }
-.game__rule__chalk__2::after {
+.game__blackboard__chalk__2::after {
   width: 6%;
   left: 25%;
   border: solid 3px #ff0;
   border-radius: 0 0 3px 3px;
 }
-.game__rule__eraser__1::before, .game__rule__eraser__1::after, .game__rule__eraser__2::before {
+.game__blackboard__eraser__1::before, .game__blackboard__eraser__1::after, .game__blackboard__eraser__2::before {
   position: absolute;
   content: "";
 }
-.game__rule__eraser__1::before {
+.game__blackboard__eraser__1::before {
   bottom: 0;
   width: 10%;
   right: 30%;
   border: solid 10px #0000cd;
   border-radius: 1px 5px;
 }
-.game__rule__eraser__1::after {
+.game__blackboard__eraser__1::after {
   bottom: 20px;
   width: 13%;
   right: 30%;
   border: solid 5px #ffa500;
   border-radius: 1px;
 }
-.game__rule__eraser__2::before {
+.game__blackboard__eraser__2::before {
   bottom: 20px;
   height: 1%;
   right: 36%;
