--- a/scss/config/_game.scss
+++ b/scss/config/_game.scss
@@ -14,7 +14,6 @@
   }
 
   &__title {
-    padding: 80px 0;
     font-size: 40px;
   }
 
@@ -23,6 +22,7 @@
   }
 
   &__input {
+    padding: 4px 8px;
     display: block;
     border: solid 3px v.$blue;
     border-radius: 16px;
@@ -48,6 +48,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  // display: none;
 
   &__container {
     max-width: 434px;
@@ -56,15 +57,37 @@
     text-align: center;
   }
 
+  &__title {
+    padding: 80px 0;
+  }
+
   &__input {
     margin: 16px auto 40px;
     font-size: 20px;
+    z-index: 12;
   }
 }
 
 // theme-display
 .game__theme-display {
+  display: none;
   height: 100%;
+
+  &__title {
+    padding-bottom: 40px;
+  }
+
+  &__input__container {
+    display: flex;
+    gap: 40px;
+    padding: 20px 0 40px 0;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  &__input {
+    font-size: 32px;
+  }
 }
 
 // load-display
