--- a/scss/config/_game.scss
+++ b/scss/config/_game.scss
@@ -38,6 +38,7 @@
     border: none;
     border-radius: 30px;
     box-shadow: 0px 4px 4px rgba($color: v.$black, $alpha: 0.5);
+    cursor: pointer;
   }
 }
 
@@ -73,6 +74,18 @@
   display: none;
   height: 100%;
 
+  &__head {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &--return {
+    padding-top: 10px;
+    font-weight: bold;
+    font-size: 20px;
+    cursor: pointer;
+  }
+
   &__title {
     padding-bottom: 40px;
   }
@@ -97,7 +110,93 @@
 
 // play-display
 .game__play-display {
+  display: none;
   height: 100%;
+
+  &__head {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &--finish {
+    padding-top: 10px;
+    font-weight: bold;
+    font-size: 20px;
+    cursor: pointer;
+  }
+
+  &__slot {
+    display: flex;
+    gap: 20px;
+    margin: 40px auto 20px;
+    padding: 40px 20px;
+    max-width: 760px;
+    height: 160px;
+    justify-content: center;
+    background-color: v.$button-color;
+    border-radius: 16px;
+    font-size: 24px;
+    font-weight: bold;
+    font-family: "Yuji Syuku", serif;
+
+    &__left {
+      display: flex;
+      max-width: 367px;
+      width: 50%;
+      justify-content: center;
+      align-items: center;
+      background-color: v.$white;
+      border-radius: 16px;
+    }
+
+    &__right {
+      display: flex;
+      max-width: 367px;
+      width: 50%;
+      justify-content: center;
+      align-items: center;
+      background-color: v.$white;
+      border-radius: 16px;
+    }
+  }
+
+  &__button {
+    display: flex;
+    gap: 20px;
+    margin: 0 auto;
+    padding: 0px 20px;
+    max-width: 760px;
+    justify-content: center;
+
+    & button {
+      width: 120px;
+      height: 80px;
+      background-color: v.$red;
+      border: none;
+      border-radius: 50%;
+      font-size: 20px;
+      font-weight: bold;
+      color: v.$white;
+      box-shadow: 0px 4px 4px rgba($color: v.$black, $alpha: 0.5);
+    }
+
+    &__left {
+      display: flex;
+      max-width: 367px;
+      width: 50%;
+      justify-content: center;
+      align-items: center;
+    }
+
+    &__right {
+      display: flex;
+      max-width: 367px;
+      width: 50%;
+      justify-content: center;
+      align-items: center;
+      border-radius: 16px;
+    }
+  }
 }
 
 // finish-display
