--- a/scss/config/_header.scss
+++ b/scss/config/_header.scss
@@ -11,19 +11,40 @@
     width: 100%;
     height: 100%;
     display: flex;
-   }
+    overflow: hidden;
+    
 
     &__slider{
-      display:inline-flex;
+      display: flex;
+      justify-content: space-around;
+      text-align: center;
       width: 100%;
       height: 100%;
-      animation: slider 10s 2s linear infinite;
+      animation: slider 20s 2s linear infinite;
+    
+
+
+      &__text{
+        width: 20vw;
+        font-size: 25px;
+        padding: 10px;
+        font-weight: 900;
+      }
+      &__text-title{
+        font-size: 30px;
+        color: rgb(207, 44, 131);
+      }
     }
-@keyframes slider{
-  0%{
-    transform: translateX(0%);
-  }100%{
-    transform: translateX(-100%);
-  }
-}
+   }
+
+
+
+
+    @keyframes slider{
+      0%{
+        transform: translateX(0%);
+      }100%{
+        transform: translateX(-100%);
+      }
+    }
 }
