--- a/scss/style.css
+++ b/scss/style.css
@@ -205,20 +205,33 @@ body {
 
 .header {
   width: 100%;
-  height: 80px;
   background-color: #e3f6f5;
 }
 .header__inner {
   width: 100%;
   height: 100%;
   display: flex;
+  overflow: hidden;
 }
-.header__slider {
-  display: inline-flex;
+.header__inner__slider {
+  display: flex;
   width: 100%;
   height: 100%;
-  -webkit-animation: slider 10s 2s linear infinite;
-          animation: slider 10s 2s linear infinite;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  -webkit-animation: slider 20s 2s linear infinite;
+          animation: slider 20s 2s linear infinite;
+}
+.header__inner__slider__text {
+  width: 20vw;
+  font-size: 24px;
+  padding: 10px;
+  font-weight: bold;
+}
+.header__inner__slider__text-title {
+  font-size: 28px;
+  color: rgb(207, 44, 131);
 }
 @-webkit-keyframes slider {
   0% {
