--- a/scss/config/_blackboard.scss
+++ b/scss/config/_blackboard.scss
@@ -25,7 +25,7 @@
       width: 5%;
       right: 10%;
       border: solid 3px v.$chalk-red-color;
-      border-radius: 4px 4px 3px 4px;
+      border-radius: 4px;
     }
     &__chalk__1::after {
       width: 5%;
@@ -37,13 +37,13 @@
       width: 4%;
       left: 10%;
       border: solid 3px v.$chalk-blue-color;
-      border-radius: 3px 0;
+      border-radius: 3px;
     }
     &__chalk__2::after {
       width: 6%;
       left: 25%;
       border: solid 3px v.$chalk-yellow-color;
-      border-radius: 0 0 3px 3px;
+      border-radius: 3px;
     }
     &__eraser__1::before,
     &__eraser__1::after,
@@ -56,12 +56,12 @@
       width: 10%;
       right: 30%;
       border: solid 10px v.$eraser-under-color;
-      border-radius: 1px 5px;
+      border-radius: 0 0 5px 5px;
     }
     &__eraser__1::after {
       bottom: 20px;
       width: 13%;
-      right: 30%;
+      right: 29.7%;
       border: solid 5px v.$eraser-top-color;
       border-radius: 1px;
     }
@@ -71,6 +71,25 @@
       right: 36%;
       border: solid 5px v.$black;
       border-radius: 1px;
+    }
+    &__btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 80%;
+      height: 60%;
+      margin: calc(40% / 2) auto;
+      background-color: v.$blackboard-color;
+      color: v.$white;
+      font-size: 50px;
+      // border: solid 5px v.$blackboard-color;
+      border: solid 3px v.$white;
+      cursor: pointer;
+
+      &:hover {
+        opacity: 0.7;
+        color: v.$chalk-yellow-color;
+      }
     }
   }
 }
