--- a/scss/style.css
+++ b/scss/style.css
@@ -443,7 +443,7 @@ body {
   width: 5%;
   right: 10%;
   border: solid 3px #f00;
-  border-radius: 4px 4px 3px 4px;
+  border-radius: 4px;
 }
 .game__blackboard__chalk__1::after {
   width: 5%;
@@ -455,13 +455,13 @@ body {
   width: 4%;
   left: 10%;
   border: solid 3px #1e90ff;
-  border-radius: 3px 0;
+  border-radius: 3px;
 }
 .game__blackboard__chalk__2::after {
   width: 6%;
   left: 25%;
   border: solid 3px #ff0;
-  border-radius: 0 0 3px 3px;
+  border-radius: 3px;
 }
 .game__blackboard__eraser__1::before, .game__blackboard__eraser__1::after, .game__blackboard__eraser__2::before {
   position: absolute;
@@ -472,12 +472,12 @@ body {
   width: 10%;
   right: 30%;
   border: solid 10px #0000cd;
-  border-radius: 1px 5px;
+  border-radius: 0 0 5px 5px;
 }
 .game__blackboard__eraser__1::after {
   bottom: 20px;
   width: 13%;
-  right: 30%;
+  right: 29.7%;
   border: solid 5px #ffa500;
   border-radius: 1px;
 }
@@ -487,4 +487,21 @@ body {
   right: 36%;
   border: solid 5px #000;
   border-radius: 1px;
+}
+.game__blackboard__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: 60%;
+  margin: 20% auto;
+  background-color: #006400;
+  color: #fff;
+  font-size: 50px;
+  border: solid 3px #fff;
+  cursor: pointer;
+}
+.game__blackboard__btn:hover {
+  opacity: 0.7;
+  color: #ff0;
 }/*# sourceMappingURL=style.css.map */
