--- a/scss/style.css
+++ b/scss/style.css
@@ -221,7 +221,7 @@ body {
   align-items: center;
   text-align: center;
   -webkit-animation: slider 20s 2s linear infinite;
-  animation: slider 20s 2s linear infinite;
+          animation: slider 20s 2s linear infinite;
 }
 .header__inner__slider__text {
   width: 20vw;
@@ -432,10 +432,7 @@ body {
   border-radius: 5px;
   position: relative;
 }
-.game__blackboard__chalk__1::before,
-.game__blackboard__chalk__1::after,
-.game__blackboard__chalk__2::before,
-.game__blackboard__chalk__2::after {
+.game__blackboard__chalk__1::before, .game__blackboard__chalk__1::after, .game__blackboard__chalk__2::before, .game__blackboard__chalk__2::after {
   position: absolute;
   content: "";
   bottom: 0;
@@ -464,9 +461,7 @@ body {
   border: solid 3px #ff0;
   border-radius: 3px;
 }
-.game__blackboard__eraser__1::before,
-.game__blackboard__eraser__1::after,
-.game__blackboard__eraser__2::before {
+.game__blackboard__eraser__1::before, .game__blackboard__eraser__1::after, .game__blackboard__eraser__2::before {
   position: absolute;
   content: "";
 }
@@ -490,4 +485,25 @@ body {
   right: 36%;
   border: solid 5px #000;
   border-radius: 1px;
-} /*# sourceMappingURL=style.css.map */
+}
+.game__blackboard__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: 60%;
+  margin: 20% auto;
+  background-color: #006400;
+  color: #fff;
+  font-size: 50px;
+  border: solid 3px #fff;
+  cursor: pointer;
+}
+.game__blackboard__btn:hover {
+  opacity: 0.7;
+  color: #ff0;
+}
+
+.js-none {
+  display: none;
+}/*# sourceMappingURL=style.css.map */
