--- a/scss/config/_header.scss
+++ b/scss/config/_header.scss
@@ -2,14 +2,45 @@
 @use "../global/mixin" as m;
 
 .header {
+  display: flex;
+  height: 100px;
   width: 100%;
   background-color: v.$light-blue;
+  font-family: "Yuji Syuku", serif;
+  
+
+
+  &__title{
+    position: relative;
+    // background: v.$button-color;
+    width: 200px;
+    height: calc(100% - 8px);
+    line-height: 100px;
+    font-size: 24px;
+    text-align: center;
+    border: solid 4px v.$blue;
+    // color: v.$white;
+
+    &::after{
+      position: absolute;
+      content: "";
+      display: block;
+      top: 2px;
+      left: 2px;
+      width: calc(100% - 8px);
+      height: calc(100% - 8px);
+    border: solid 2px v.$blue;
+    }
+  }
 
   &__inner {
     width: 100%;
     height: 100%;
     display: flex;
     overflow: hidden;
+  
+
+    
 
     &__slider {
       display: flex;
@@ -25,10 +56,6 @@
         font-size: 24px;
         padding: 10px;
         font-weight: bold;
-      }
-      &__text-title {
-        font-size: 28px;
-        color: rgb(207, 44, 131);
       }
     }
   }
