--- a/scss/style.css
+++ b/scss/style.css
@@ -204,8 +204,30 @@ body {
 }
 
 .header {
+  display: flex;
+  height: 100px;
   width: 100%;
   background-color: #e3f6f5;
+  font-family: "Yuji Syuku", serif;
+}
+.header__title {
+  position: relative;
+  width: 200px;
+  height: calc(100% - 8px);
+  line-height: 100px;
+  font-size: 24px;
+  text-align: center;
+  border: solid 4px #90b4ce;
+}
+.header__title::after {
+  position: absolute;
+  content: "";
+  display: block;
+  top: 2px;
+  left: 2px;
+  width: calc(100% - 8px);
+  height: calc(100% - 8px);
+  border: solid 2px #90b4ce;
 }
 .header__inner {
   width: 100%;
@@ -228,10 +250,6 @@ body {
   font-size: 24px;
   padding: 10px;
   font-weight: bold;
-}
-.header__inner__slider__text-title {
-  font-size: 28px;
-  color: rgb(207, 44, 131);
 }
 @-webkit-keyframes slider {
   0% {
