--- a/scss/config/_game.scss
+++ b/scss/config/_game.scss
@@ -4,6 +4,7 @@
 .game {
   margin: 0 auto;
   max-width: 968px;
+  border: solid 8px v.$white;
   background-color: v.$light-blue;
   border-radius: 60px;
   overflow: hidden;
@@ -123,49 +124,59 @@
   }
 
   &__slot {
-    display: flex;
-    gap: 20px;
     margin: 40px auto 20px;
-    padding: 40px 20px;
-    max-width: 760px;
-    height: 160px;
-    justify-content: center;
+    padding: 40px 40px;
+    text-align: center;
     background-color: v.$button-color;
-    border-radius: 16px;
-    font-size: 24px;
-    font-weight: bold;
-    font-family: "Yuji Syuku", serif;
 
-    &__left {
-      display: flex;
-      max-width: 367px;
-      width: 50%;
-      justify-content: center;
-      align-items: center;
-      background-color: v.$white;
+    &__spin {
+      margin-bottom: 20px;
+      padding: 10px 40px;
+      // width: 100%;
+      border: solid 4px v.$white;
+      font-size: 20px;
+      font-weight: bold;
+      background-color: v.$light-blue;
       border-radius: 16px;
     }
 
-    &__right {
+    &__inner {
+      display: flex;
+      gap: 20px;
+      margin: 0 auto;
+      max-width: 760px;
+      justify-content: center;
+      border-radius: 16px;
+      font-size: 24px;
+      font-weight: bold;
+      font-family: "Yuji Syuku", serif;
+    }
+
+    &__panel {
       display: flex;
       max-width: 367px;
       width: 50%;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      border-radius: 16px;
+    }
+
+    &__text-box {
+      display: flex;
+      height: 120px;
+      width: 100%;
+      font-size: 24px;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       background-color: v.$white;
+      border: solid 8px v.$light-blue;
       border-radius: 16px;
     }
-  }
 
-  &__button {
-    display: flex;
-    gap: 20px;
-    margin: 0 auto;
-    padding: 0px 20px;
-    max-width: 760px;
-    justify-content: center;
-
-    & button {
+    &__button {
+      margin-top: 20px;
       width: 120px;
       height: 80px;
       background-color: v.$red;
@@ -174,24 +185,8 @@
       font-size: 20px;
       font-weight: bold;
       color: v.$white;
-      box-shadow: 0px 4px 4px rgba($color: v.$black, $alpha: 0.5);
-    }
-
-    &__left {
-      display: flex;
-      max-width: 367px;
-      width: 50%;
-      justify-content: center;
-      align-items: center;
-    }
-
-    &__right {
-      display: flex;
-      max-width: 367px;
-      width: 50%;
-      justify-content: center;
-      align-items: center;
-      border-radius: 16px;
+      box-shadow: 0px 4px 4px rgba($color: v.$black, $alpha: 0.6);
+      text-align: center;
     }
   }
 }
