--- a/scss/style.css
+++ b/scss/style.css
@@ -380,6 +380,8 @@ button {
   margin: 40px auto 20px;
   padding: 40px 40px;
   text-align: center;
+  border: solid 4px #fff;
+  border-radius: 16px;
   background-color: #3da9fc;
 }
 .game__play-display__slot__spin {
@@ -388,6 +390,7 @@ button {
   border: solid 4px #fff;
   font-size: 20px;
   font-weight: bold;
+  color: #094067;
   background-color: #e3f6f5;
   border-radius: 16px;
 }
@@ -397,7 +400,6 @@ button {
   margin: 0 auto;
   max-width: 760px;
   justify-content: center;
-  border-radius: 16px;
   font-size: 24px;
   font-weight: bold;
   font-family: "Yuji Syuku", serif;
