--- a/scss/config/_blackboard.scss
+++ b/scss/config/_blackboard.scss
@@ -5,12 +5,11 @@
   &__blackboard {
     position: relative;
     width: 50%;
+
     &__container {
       max-width: 434px;
-      // width: 50%;
       height: 420px;
       padding: 0 10px 10px;
-      // background-color: v.$blue;
       background-color: v.$blackboard-color;
       border: solid 8px v.$blackboard-border-color;
       border-radius: 5px;
@@ -18,6 +17,7 @@
       overflow-y: scroll;
       line-height: 1.5;
     }
+
     &__chalk__1::before,
     &__chalk__1::after,
     &__chalk__2::before,
@@ -27,30 +27,35 @@
       bottom: 1.5%;
       z-index: 10;
     }
+
     &__chalk__1::before {
       width: 5%;
       right: 10%;
-      border: solid 3px v.$chalk-red-color;
-      border-radius: 4px 4px 3px 4px;
+      border: solid 3px v.$white;
+      border-radius: 4px;
     }
+
     &__chalk__1::after {
       width: 5%;
       right: 50%;
       border: solid 3px v.$chalk-red-color;
       border-radius: 2px;
     }
+
     &__chalk__2::before {
       width: 4%;
       left: 10%;
       border: solid 3px v.$chalk-blue-color;
-      border-radius: 3px;
+      border-radius: 3px 0;
     }
+
     &__chalk__2::after {
       width: 6%;
       left: 25%;
       border: solid 3px v.$chalk-yellow-color;
       border-radius: 3px;
     }
+
     &__eraser__1::before,
     &__eraser__1::after,
     &__eraser__2::before {
@@ -58,26 +63,85 @@
       content: "";
       z-index: 5;
     }
+
     &__eraser__1::before {
       bottom: 1%;
       width: 10%;
       right: 30%;
       border: solid 10px v.$eraser-under-color;
-      border-radius: 1px 5px;
+      border-radius: 0 0 3px 3px;
     }
+
     &__eraser__1::after {
       bottom: 20px;
       width: 13%;
-      right: 30%;
+      right: 29.5%;
       border: solid 5px v.$eraser-top-color;
       border-radius: 1px;
     }
+
     &__eraser__2::before {
       bottom: 20px;
       height: 1%;
       right: 36%;
       border: solid 5px v.$black;
       border-radius: 1px;
+    }
+
+    &__btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 80%;
+      height: 60%;
+      margin: calc(40% / 2) auto;
+      background-color: v.$blackboard-color;
+      color: v.$white;
+      font-size: 36px;
+      border: solid 3px v.$white;
+      cursor: pointer;
+
+      &:hover {
+        opacity: 0.7;
+        color: v.$chalk-yellow-color;
+        border-color: v.$chalk-yellow-color;
+      }
+    }
+
+    &__title {
+      position: sticky;
+      top: 0;
+      color: v.$white;
+      background-color: v.$blackboard-color;
+      font-size: 36px;
+    }
+
+    &__rule {
+      margin-top: 10%;
+      font-size: 20px;
+      color: v.$white;
+
+      &__title {
+        text-align: center;
+      }
+
+      &__text {
+        &::before {
+          content: "・";
+        }
+      }
+
+      &__red {
+        color: v.$chalk-red-color;
+      }
+
+      &__blue {
+        color: v.$chalk-blue-color;
+      }
+
+      &__yellow {
+        color: v.$chalk-yellow-color;
+      }
     }
   }
 }
