--- a/scss/style.css
+++ b/scss/style.css
@@ -276,7 +276,7 @@ button {
 
 .game {
   margin: 0 auto;
-  max-width: 968px;
+  max-width: 988px;
   border: solid 8px #fff;
   background-color: #e3f6f5;
   border-radius: 60px;
@@ -468,11 +468,7 @@ button {
 .game__blackboard__chalk__1::before {
   width: 5%;
   right: 10%;
-<<<<<<< HEAD
-  border: solid 3px #f00;
-=======
   border: solid 3px #fff;
->>>>>>> origin/feature/4/yamato
   border-radius: 4px;
 }
 .game__blackboard__chalk__1::after {
@@ -485,7 +481,7 @@ button {
   width: 4%;
   left: 10%;
   border: solid 3px #1e90ff;
-  border-radius: 3px;
+  border-radius: 3px 0;
 }
 .game__blackboard__chalk__2::after {
   width: 6%;
@@ -503,20 +499,12 @@ button {
   width: 10%;
   right: 30%;
   border: solid 10px #0000cd;
-<<<<<<< HEAD
-  border-radius: 0 0 5px 5px;
-=======
   border-radius: 0 0 3px 3px;
->>>>>>> origin/feature/4/yamato
 }
 .game__blackboard__eraser__1::after {
   bottom: 20px;
   width: 13%;
-<<<<<<< HEAD
-  right: 29.7%;
-=======
   right: 29.5%;
->>>>>>> origin/feature/4/yamato
   border: solid 5px #ffa500;
   border-radius: 1px;
 }
@@ -536,15 +524,13 @@ button {
   margin: 20% auto;
   background-color: #006400;
   color: #fff;
-  font-size: 50px;
+  font-size: 36px;
   border: solid 3px #fff;
   cursor: pointer;
 }
 .game__blackboard__btn:hover {
   opacity: 0.7;
   color: #ff0;
-<<<<<<< HEAD
-=======
   border-color: #ff0;
 }
 .game__blackboard__title {
@@ -553,11 +539,11 @@ button {
   top: 0;
   color: #fff;
   background-color: #006400;
-  font-size: 40px;
+  font-size: 36px;
 }
 .game__blackboard__rule {
   margin-top: 10%;
-  font-size: 30px;
+  font-size: 20px;
   color: #fff;
 }
 .game__blackboard__rule__title {
@@ -574,7 +560,6 @@ button {
 }
 .game__blackboard__rule__yellow {
   color: #ff0;
->>>>>>> origin/feature/4/yamato
 }
 
 .js-none {
