--- a/scss/config/_game.scss
+++ b/scss/config/_game.scss
@@ -1,6 +1,15 @@
 @use "../global/variables" as v;
 @use "../global/mixin" as m;
 
+.main {
+  @include m.mq(sp) {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    margin: 0 auto;
+  }
+}
+
 .game {
   margin: 0 auto;
   max-width: 988px;
@@ -10,8 +19,17 @@
   overflow: hidden;
   box-shadow: 0px 4px 4px rgba($color: v.$black, $alpha: 0.5);
 
+  @include m.mq(sp) {
+    width: 100%;
+  }
+
   &__inner {
     padding: 40px;
+
+    @include m.mq(sp) {
+      padding: 0;
+      width: 100%;
+    }
   }
 
   &__title {
@@ -51,21 +69,54 @@
   justify-content: space-between;
   align-items: center;
 
+  @include m.mq(sp) {
+    flex-direction: column;
+    width: 100%;
+    padding: 0px;
+    margin-right: 20px;
+  }
+
   &__container {
     max-width: 434px;
     width: 50%;
     height: 420px;
     text-align: center;
+
+    @include m.mq(sp) {
+      width: 100%;
+      height: 100%;
+      margin: 0 0 15%;
+    }
   }
 
   &__title {
     padding: 80px 0;
+
+    @include m.mq(sp) {
+      display: none;
+      padding: 10% 0;
+    }
+
+    &__sp {
+      display: none;
+      margin: 10% 0 0;
+      font-size: 40px;
+      font-weight: bold;
+
+      @include m.mq(sp) {
+        display: block;
+      }
+    }
   }
 
   &__input {
     margin: 16px auto 40px;
     font-size: 20px;
     z-index: 12;
+  }
+
+  &__button {
+    width: 90%;
   }
 }
 
