--- a/scss/style.css
+++ b/scss/style.css
@@ -180,6 +180,11 @@ body {
   z-index: -3;
   overflow: hidden;
 }
+@media screen and (max-width: 375px) {
+  body {
+    overflow: visible;
+  }
+}
 
 button {
   cursor: pointer;
@@ -203,6 +208,11 @@ button {
   background-color: #90b4ce;
   opacity: 0.8;
   z-index: -1;
+}
+@media screen and (max-width: 375px) {
+  .container {
+    height: auto;
+  }
 }
 
 .main {
@@ -274,6 +284,15 @@ button {
   }
 }
 
+@media screen and (max-width: 375px) {
+  .main {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    margin: 0 auto;
+  }
+}
+
 .game {
   margin: 0 auto;
   max-width: 988px;
@@ -283,8 +302,19 @@ button {
   overflow: hidden;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
 }
+@media screen and (max-width: 375px) {
+  .game {
+    width: 100%;
+  }
+}
 .game__inner {
   padding: 40px;
+}
+@media screen and (max-width: 375px) {
+  .game__inner {
+    padding: 0;
+    width: 100%;
+  }
 }
 .game__title {
   font-size: 40px;
@@ -318,19 +348,54 @@ button {
   justify-content: space-between;
   align-items: center;
 }
+@media screen and (max-width: 375px) {
+  .game__start-display {
+    flex-direction: column;
+    width: 100%;
+    padding: 0px;
+    margin-right: 20px;
+  }
+}
 .game__start-display__container {
   max-width: 434px;
   width: 50%;
   height: 420px;
   text-align: center;
 }
+@media screen and (max-width: 375px) {
+  .game__start-display__container {
+    width: 100%;
+    height: 100%;
+    margin: 0 0 15%;
+  }
+}
 .game__start-display__title {
   padding: 80px 0;
+}
+@media screen and (max-width: 375px) {
+  .game__start-display__title {
+    display: none;
+    padding: 10% 0;
+  }
+}
+.game__start-display__title__sp {
+  display: none;
+  margin: 10% 0 0;
+  font-size: 40px;
+  font-weight: bold;
+}
+@media screen and (max-width: 375px) {
+  .game__start-display__title__sp {
+    display: block;
+  }
 }
 .game__start-display__input {
   margin: 16px auto 40px;
   font-size: 20px;
   z-index: 12;
+}
+.game__start-display__button {
+  width: 90%;
 }
 
 .game__theme-display {
@@ -448,6 +513,12 @@ button {
   position: relative;
   width: 50%;
 }
+@media screen and (max-width: 375px) {
+  .game__blackboard {
+    width: 90%;
+    margin: 10% 0;
+  }
+}
 .game__blackboard__container {
   max-width: 434px;
   height: 420px;
@@ -508,6 +579,12 @@ button {
   border: solid 5px #ffa500;
   border-radius: 1px;
 }
+@media screen and (max-width: 375px) {
+  .game__blackboard__eraser__1::after {
+    width: 13.5%;
+    right: 30%;
+  }
+}
 .game__blackboard__eraser__2::before {
   bottom: 20px;
   height: 1%;
@@ -542,12 +619,14 @@ button {
   font-size: 36px;
 }
 .game__blackboard__rule {
-  margin-top: 10%;
+  margin: 10% 0;
   font-size: 20px;
   color: #fff;
 }
 .game__blackboard__rule__title {
-  text-align: center;
+  display: inline-block;
+  margin: 0 auto;
+  background: linear-gradient(transparent 78%, #1e90ff 0%);
 }
 .game__blackboard__rule__text::before {
   content: "・";
