--- a/scss/config/_game.scss
+++ b/scss/config/_game.scss
@@ -114,6 +114,11 @@
     }
   }
 
+  &__text {
+    font-size: 24px;
+    font-weight: bold;
+  }
+
   &__input {
     margin: 16px auto 40px;
     font-size: 20px;
@@ -122,6 +127,19 @@
 
   &__button {
     width: 90%;
+
+    &--reset {
+      margin: 0px auto 20px;
+      padding: 10px 20px;
+      background-color: v.$red;
+      border: none;
+      border-radius: 16px;
+      font-size: 20px;
+      font-weight: bold;
+      color: v.$white;
+      box-shadow: 0px 4px 4px rgba($color: v.$black, $alpha: 0.6);
+      text-align: center;
+    }
   }
 }
 
